--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nestjs/graphql": "^10.0.11",
     "@nestjs/platform-express": "^8.0.0",
     "apollo-server-express": "^3.7.0",
+    "axios": "^0.27.2",
     "graphql": "^16.4.0",
     "graphql-tools": "^8.2.8",
     "reflect-metadata": "^0.1.13",
