--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
   },
   "private": true,
   "dependencies": {
+    "@nestjs/apollo": "^10.0.11",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/graphql": "^10.0.11",
     "@nestjs/platform-express": "^8.0.0",
+    "apollo-server-express": "^3.7.0",
+    "axios": "^0.27.2",
+    "graphql": "^16.4.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "tslib": "^2.3.0"
