fix config import path

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,9 +14,7 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {
-      "@/config/*": ["config/*"]
-    }
+    "paths": {}
   },
   "exclude": ["node_modules", "tmp"]
 }
