--- a/apps/starwar-graphql/tsconfig.app.json
+++ b/apps/starwar-graphql/tsconfig.app.json
@@ -5,7 +5,12 @@
     "module": "commonjs",
     "types": ["node"],
     "emitDecoratorMetadata": true,
-    "target": "es2015"
+    "target": "es2015",
+    "paths": {
+      "@/config/*": ["config/*"],
+      "@/infrastructure/*": ["apps/starwar-graphql/src/infrastructure/*"],
+      "@/src/*": ["apps/starwar-graphql/src/*"]
+    }
   },
   "exclude": ["jest.config.ts", "**/*.spec.ts", "**/*.test.ts"],
   "include": ["**/*.ts"]
