--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "graphql-tools": "^8.2.8",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
+    "supertest": "^6.2.3",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
