--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test"
+    "test": "nx test --setupFiles dotenv/config"
   },
   "private": true,
   "dependencies": {
@@ -24,7 +24,7 @@
   },
   "devDependencies": {
     "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
+    "@nestjs/testing": "^8.4.4",
     "@nrwl/cli": "14.1.4",
     "@nrwl/eslint-plugin-nx": "14.1.4",
     "@nrwl/jest": "14.1.4",
@@ -42,6 +42,7 @@
     "jest": "27.5.1",
     "nx": "14.1.4",
     "prettier": "^2.5.1",
+    "supertest": "^6.2.3",
     "ts-jest": "27.1.4",
     "ts-node": "9.1.1",
     "typescript": "~4.6.2"
