--- a/apps/starwar-graphql/tsconfig.spec.json
+++ b/apps/starwar-graphql/tsconfig.spec.json
@@ -3,7 +3,12 @@
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
     "module": "commonjs",
-    "types": ["jest", "node"]
+    "types": ["jest", "node"],
+    "paths": {
+      "@/config/*": ["config/*"],
+      "@/src/*": ["apps/starwar-graphql/src/*"],
+      "@/infrastructure/*": ["apps/starwar-graphql/src/infrastructure/*"]
+    }
   },
   "include": ["jest.config.ts", "**/*.test.ts", "**/*.spec.ts", "**/*.d.ts"]
 }
