--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test --setupFiles dotenv/config"
+    "test": "nx test --setupFiles dotenv/config",
+    "test:e2e": "nx test --setupFiles dotenv/config -t e2e",
+    "test:integration": "nx test --setupFiles dotenv/config -t integration"
   },
   "private": true,
   "dependencies": {
