--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/graphql": "^10.0.11",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/typeorm": "^8.0.3",
     "apollo-server-express": "^3.7.0",
     "axios": "^0.27.2",
     "graphql": "^16.4.0",
     "graphql-tools": "^8.2.8",
+    "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "supertest": "^6.2.3",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "typeorm": "^0.3.6"
   },
   "devDependencies": {
     "@nestjs/schematics": "^8.0.0",
