--- a/package.json
+++ b/package.json
@@ -17,15 +17,16 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/graphql": "^10.0.11",
     "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/typeorm": "^8.0.3",
     "apollo-server-express": "^3.7.0",
     "axios": "^0.27.2",
     "graphql": "^16.4.0",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
-    "tslib": "^2.3.0",
-    "typeorm": "^0.3.6"
+    "sequelize": "^6.19.0",
+    "sequelize-typescript": "^2.1.3",
+    "sqlite": "^4.1.1",
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@nestjs/schematics": "^8.0.0",
@@ -40,6 +41,7 @@
     "@nrwl/workspace": "14.1.4",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
+    "@types/sequelize": "^4.28.13",
     "@typescript-eslint/eslint-plugin": "~5.18.0",
     "@typescript-eslint/parser": "~5.18.0",
     "eslint": "~8.12.0",
