--- a/package.json
+++ b/package.json
@@ -17,17 +17,20 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/graphql": "^10.0.11",
     "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/typeorm": "^8.0.3",
+    "@types/sequelize": "^4.28.13",
     "apollo-server-express": "^3.7.0",
     "axios": "^0.27.2",
+    "better-sqlite3": "^7.5.1",
     "graphql": "^16.4.0",
     "graphql-tools": "^8.2.8",
     "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
+    "sequelize": "^6.19.0",
+    "sequelize-typescript": "^2.1.3",
     "supertest": "^6.2.3",
-    "tslib": "^2.3.0",
-    "typeorm": "^0.3.6"
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@nestjs/schematics": "^8.0.0",
@@ -40,7 +43,7 @@
     "@nrwl/node": "14.1.4",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/workspace": "14.1.4",
-    "@types/jest": "27.4.1",
+    "@types/jest": "^27.5.0",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "~5.18.0",
     "@typescript-eslint/parser": "~5.18.0",
