--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "rxjs": "^7.0.0",
     "sequelize": "^6.19.0",
     "sequelize-typescript": "^2.1.3",
+    "sqlite3": "^5.0.8",
     "supertest": "^6.2.3",
     "tslib": "^2.3.0"
   },
