--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sequelize": "^6.19.0",
     "sequelize-typescript": "^2.1.3",
     "sqlite": "^4.1.1",
+    "sqlite3": "^5.0.8",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
