--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nestjs/platform-express": "^8.0.0",
     "apollo-server-express": "^3.7.0",
     "axios": "^0.27.2",
+    "dataloader": "^2.1.0",
     "graphql": "^16.4.0",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
