--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "apollo-server-express": "^3.7.0",
     "axios": "^0.27.2",
     "better-sqlite3": "^7.5.1",
+    "dataloader": "^2.1.0",
     "graphql": "^16.4.0",
     "graphql-tools": "^8.2.8",
     "pg": "^8.7.3",
