--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "graphql-tools": "^8.2.8",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
+    "redis": "^4.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "sequelize": "^6.19.0",
