--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dataloader": "^2.1.0",
     "graphql": "^16.4.0",
     "pg": "^8.7.3",
+    "redis": "^4.1.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.0.0",
     "sequelize": "^6.19.0",
